--- a/mi_assessment/assets/templates/assets/login.html
+++ b/mi_assessment/assets/templates/assets/login.html
@@ -13,11 +13,11 @@
             {% csrf_token %}
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
-                <input type="text" name="username" id="username" class="form-control" required>
+                <input type="text" name="username" id="username" placeholder="Type admin"  value="admin"class="form-control" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" name="password" id="password" class="form-control" required>
+                <input type="password" name="password" id="password" value="admin" placeholder="type admin" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
